--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.112",
     "uvicorn[standard]>=0.30",
-    "httpx>=0.27",
+    "httpx[http2]>=0.27",
     "pydantic>=2.7",
     "jinja2>=3.1",
     "anyio>=4.4",
